[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]

[project.urls]
Documentation = "https://tryreadthedocs-by-daemo00.readthedocs.io"

[project.optional-dependencies]
docs = [
	"sphinx",
	"furo",
]